<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_shape_top_corners"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/header_bot_sheet"
                android:layout_width="32dp"
                android:layout_height="4dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/shp_oval_grey" />

            <TextView
                android:id="@+id/text_popular"
                style="@style/TextHeadline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/popular"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_bot_sheet" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_popular"
                tools:listitem="@layout/item_film_potrait" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_popular"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_popular">

                <include layout="@layout/shimmer_effect_item_film_potrait"/>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/text_coming_soon"
                style="@style/TextHeadline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/coming_soon"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_popular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_coming_soon"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_coming_soon"
                tools:listitem="@layout/item_film_potrait" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_coming_soon"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_coming_soon">

                <include layout="@layout/shimmer_effect_item_film_potrait"/>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/text_top_rated"
                style="@style/TextHeadline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/top_rated"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_coming_soon" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_rated"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_top_rated"
                tools:listitem="@layout/item_film_potrait" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_top_rated"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_top_rated">

                <include layout="@layout/shimmer_effect_item_film_potrait"/>
            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>